# cmake-project-template

./: CMakeLists.txt  Makefile  main.c
core/: game-core.c  game-core.h
